<resources>
    <string name="app_name">TimerCustom</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_timer_name">Fitness Timer</string>
    <string name="btnStart">Start</string>
    <string name="btnReset">Reset</string>
    <string name="titleDialog">Set Time</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Hour">Hour</string>
    <string name="Minute">Minute</string>
    <string name="Secund">Secund</string>
    <string name="default_time">45:00</string>
    <string name="btnStop">Stop</string>
</resources>
