<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"

    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnStart"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStart" />

    <RelativeLayout
        android:id="@+id/progressTimer"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Large"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/tv_progress_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/default_time"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnReset"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnReset" />

</LinearLayout>