<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <NumberPicker
            android:id="@+id/numberHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/wl_blue"/>

        <TextView
            android:id="@+id/txtViewHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Hour"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <NumberPicker
            android:id="@+id/numberMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/wl_blue"/>

        <TextView
            android:id="@+id/txtViewMinute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Minute"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <NumberPicker
            android:id="@+id/numberSecund"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/wl_blue"/>

        <TextView
            android:id="@+id/txtViewSecund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Secund"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

</LinearLayout>